Debugged Misaligned Text Issue
Text on hover remains in center across browsers/platforms

--- a/main.css
+++ b/main.css
@@ -492,6 +492,13 @@ p {
 
 }
 
+/* Individual Project Images */
+
+.ubook {
+
+
+}
+
 /*Hover*/
 
 .overlay, .hover-box {
@@ -527,6 +534,9 @@ p {
 	    left: 50%;
 	    margin-right: -50%;
 	    transform: translate(-50%, -50%);
+	    -webkit-transform: translate(-50%, -50%);
+	    -moz-transform: translate(-50%, -50%);
+	    -o-transform: translate(-50%, -50%);
 
 
 }
